Mon Aug 27 13:29:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2356_Regression/client.cpp:
          Fixed error in this test program, when things did work we returned
          1 by accident which was wrong

Mon Aug 27 08:06:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/SSLIOP.mpc:
        * orbsvcs/orbsvcs/Makefile.am:
          Added missing header and inline files section. Thanks to
          Vikram Karandikar <softking at gmail dot com> for reporting this

Sat Aug 25 12:37:53 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/AHM_Exceptions/run_test.pl:
        * tests/CDR/run_test.pl:
        * tests/CallbackTest/run_test.pl:
        * tests/Client_Leaks/run_test.pl:
        * tests/Codec/run_test.pl:
        * tests/Collocation/run_test.pl:
        * tests/Hello/run_test.pl:
        * tests/Param_Test/run_test.pl: Converted to use the new target
          test mechanism. See ACE ChangeLog
          Sat Aug 25 12:57:30 UTC 2007  Steve Huston  <shuston@riverace.com>

Fri Aug 24 15:18:56 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/TAO_Internal.cpp:
          Again, since adding the -ORBGestalt Local option, there was a
          problem when multiple ORBs were defined. It was assumed that
          since each ORB has its own local configuration context in
          addition to the global context, the local configuration instance
          should be closed when the ORB is destroyed. However, this isn't
          the case when the only configuration context is the global one.

Thu Aug 23 14:39:30 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/TAO_Internal.cpp:
          One more change related to the use of a single global context.
          The failed status was being lost if TAO debug level was 0.

Wed Aug 22 20:27:35 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/TAO_Internal.cpp: